<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    style="@style/Theme.AppCompat.Light"
    android:theme="@style/Theme.AppCompat.Light"
    android:layout_margin="16dp"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/note_title_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="22sp"
        android:hint="Todo Title"
        android:background="@drawable/border"
        android:padding="8dp"
        />


    <EditText
        android:id="@+id/note_body_fragment"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="top"
        android:layout_marginTop="8dp"
        android:hint="Todo description"
        tools:text="Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description Some Note description "
        android:padding="8dp"
        android:textColor="@color/grey4"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:id="@+id/container_due_date"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_date_range_black_24dp"
            />

        <TextView
            android:background="@drawable/border"
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select time"
            android:textColor="#000"
            android:textSize="15sp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="12dp"
            android:layout_marginStart="16dp"
            />


    </LinearLayout>


    <Button
        android:backgroundTint="#D8D8D8"
        android:id="@+id/btSaveNote"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="save"/>


</LinearLayout>