<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:weightSum="100"
    android:gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:text="Some Note TitleSome Note TitleSome Note TitleSome Note TitleSome Note TitleSome Note TitleSome Note Title"
        android:textColor="#000"
        android:textSize="21sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/note_timestamp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/note_body"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="Some Note description Some Note description Some Note description Some Note description Some Note description "
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/note_title" />


    <TextView
        android:id="@+id/note_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/teal_700"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/note_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10:00 AMDec 1 2017" />



</androidx.constraintlayout.widget.ConstraintLayout>