<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.Light"
    android:theme="@style/Theme.AppCompat.Light"
    >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add_white_24dp"
        app:rippleColor="@color/tealLight"
        android:backgroundTint="@color/grey4"
        android:background="@color/grey4"
        android:id="@+id/add_new_note_fab"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>